gtest/GTestWrapper.java fails on armhf due to LogDecorations.iso8601_utctime_test

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 24
    • Affects Version/s: 11, 17, 21, 22, 23, 24
    • Component/s: hotspot
    • b07
    • arm
    • linux_ubuntu

      When running armhf google tests in oracular the following failure occurs:
      [ RUN ] LogDecorations.iso8601_utctime_test
      ./test/hotspot/gtest/logging/test_logDecorations.cpp:178: Failure
      Expected equality of these values:
        0
        offset
          Which is: -153
      Invalid offset: 2024-06-18T07:16:49.280+-153
      [ FAILED ] LogDecorations.iso8601_utctime_test (0 ms)

      This issue is caused by 64bit time_t transition.

            Assignee:
            Vladimir Petko
            Reporter:
            Vladimir Petko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: