8334502: gtest/GTestWrapper.java fails on armhf due to LogDecorations.iso8601_utctime_test

Backport-of: d41d2a7a82cb6eff17396717e2e14139ad8179ba